# amfv

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: pytest.yml
baseline/: README.md  pyproject.toml
baseline/amfv_baseline/: __init__.py  claim_cache.py  kiss_eval.py  retrieve_claims.py  run_kiss_eval.py  run_pipeline.py
baseline/test/: test_claim_cache.py  test_kiss_eval.py  test_retrieve_claims.py  test_run_kiss_eval.py  test_run_pipeline.py
data/eval/: kiss_nice_eval.jsonl
datasets/: AskDocs.demo.jsonl  README.md  pyproject.toml
datasets/amfv_datasets/: __init__.py  chunking.py  corpus.py  nice_er_parser.py  nice_ingest.py
datasets/amfv_datasets/cli/: build_index.py  query.py
datasets/amfv_datasets/ingest/: nice.py
datasets/amfv_datasets/retrieval/: __init__.py  base.py  bm25.py  colbert.py  hybrid.py
datasets/test/: test_nice_ingest.py
decomposer/: README.md  Untitled  evaluate.py  pyproject.toml  requirements.txt  run_eval.sh  run_eval_mistral.sh
decomposer/amfv_decomposer/: __init__.py  base.py  factscore_decomposer.py  hf_client.py  llm_decomposer.py  vllm_client.py
decomposer/amfv_decomposer/baselines/: __init__.py  factscore.py  medscore.py  veriscore.py  veriscore_original.py
decomposer/results/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json  veriscore_original_AskDocs.json
decomposer/results/Qwen3-8B/AskDocs/20260609_143558/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json
decomposer/results/Qwen3-8B/AskDocs/20260610_171047/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json
decomposer/results/Qwen3.6-35B-A3B/AskDocs/20260609_161236/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json
decomposer/results/Qwen3.6-35B-A3B/AskDocs/20260610_174032/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json
decomposer/results/gpt-oss-120b/AskDocs/20260609_163747/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json
decomposer/results/gpt-oss-120b/AskDocs/20260610_180213/: factscore_AskDocs.json  medscore_AskDocs.json  sample_for_annotation_AskDocs.jsonl  summary_AskDocs.json  veriscore_AskDocs.json
decomposer/test/: test_factscore_decomposer.py  test_llm_decomposer.py  test_llm_decomposer_integration.py
decomposer/tests/: test_evaluate.py
search/: README.md  pyproject.toml
search/amfv_search/: __init__.py  bm25_index.py  hybrid_retrieval.py
search/test/: test_bm25_index.py  test_hybrid_retrieval.py
training/: README.md  pyproject.toml
training/amfv_training/: __init__.py
verifier/: README.md  pyproject.toml
verifier/amfv_verifier/: __init__.py  basic_verifier.py  llm_verifier.py
verifier/test/: test_basic_verifier.py  test_llm_verifier.py  test_llm_verifier_integration.py
