[project]
name = "amfv-baseline"
version = "0.0.1"
description = "MVP Baseline reproducing the Baichuan-M3 agentic medical fact verification pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["test"]
