[project]
name = "amfv-datasets"
version = "0.0.1"
description = "Dataset ingestion, processing, and construction for AMFV"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]
