[project]
name = "amfv-datasets"
version = "0.0.1"
description = "Dataset ingestion, processing, and construction for AMFV"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "pylate>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
extend = "../ruff.toml"

[tool.pytest.ini_options]
testpaths = ["test"]
