[project]
name = "amfv-decomposer"
version = "0.0.1"
description = "Medical claim decomposition component for AMFV"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.17,<0.18",
    "spacy>=3.8,<3.9",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    # VeriScore-original only (transformers + peft + bitsandbytes)
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "accelerate>=0.27",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]
