[project]
name = "amfv-search"
version = "0.0.1"
description = "Medical evidence search component for AMFV"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
extend = "../ruff.toml"

[tool.pytest.ini_options]
testpaths = ["test"]
