[project]
name = "amfv-search"
version = "0.0.1"
description = "Medical evidence search component for AMFV"
requires-python = ">=3.13"
dependencies = [  "numpy>=2.0.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]
