[project]
name = "amfv-training"
version = "0.0.1"
description = "Independent training experiments and recipes for AMFV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["test"]
