[project]
name = "amfv-verifier"
version = "0.0.1"
description = "Medical fact verification component for AMFV"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]
